[project]
name = "orpi-scrap"
version = "0.1.0"
description = "A scraper to get info about orpi's real estate agencies."
authors = [
    { name = "vinri2z", email = "vincnt.rizz@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "aiohttp>=3.9.3",
    "pandas>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye.scripts]
export = 'python src/orpi_scrap/main.py'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/orpi_scrap"]
